# qtlanguageserver

./: public.patch
src/languageserver/: CMakeLists.txt
